src/objects/contactInformation__c.object
<CustomObject>
    <fields>
        <fullName>Account__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Contact Information</relationshipLabel>
        <relationshipName>Contact_Information</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>City__c</fullName>
        <label>City</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ContactInformationType__c</fullName>
        <formula>IF(ISBLANK(Phone__c),&apos;Address&apos;,&apos;Phone&apos;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>ContactInformationType (Formula)</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Country__c</fullName>
        <label>Country</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Landline__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Landline</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Notes__c</fullName>
        <label>Notes</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Phone__c</fullName>
        <label>Phone</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>Primary__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Primary</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <label>Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Invalid</fullName>
                </value>
                <value>
                    <fullName>Non Verified</fullName>
                    <default>true</default>
                    <label>Non Verified</label>
                </value>
                <value>
                    <fullName>Verified</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Street__c</fullName>
        <label>Street</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Type__c</fullName>
        <label>Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Landline</fullName>
                </value>
                <value>
                    <fullName>Cell</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>stateProvince__c</fullName>
        <label>State/Province</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>zipPostalCode__c</fullName>
        <label>Zip/Postal Code</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>Contact Information</label>
    <nameField>
        <displayFormat>Contact Info -{000000}</displayFormat>
        <label>Contact Information Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Contact Information</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
    <validationRules>
        <fullName>EitherPhoneOrAddress</fullName>
        <active>true</active>
        <description>User can Either enter Phone Or Address fields</description>
        <errorConditionFormula>AND( NOT(ISBLANK(Phone__c)),OR( NOT(ISBLANK(Street__c)), NOT(ISBLANK(City__c)), NOT(ISBLANK(stateProvince__c)), NOT(ISBLANK(zipPostalCode__c)), NOT(ISBLANK(Country__c))))</errorConditionFormula>
        <errorMessage>Please enter Phone or Address</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>PhoneOrAddressMandatory</fullName>
        <active>true</active>
        <description>Phone Or Address fields is mandatory</description>
        <errorConditionFormula>AND( ISBLANK(Phone__c),ISBLANK(Street__c), ISBLANK(City__c), ISBLANK(stateProvince__c), ISBLANK(zipPostalCode__c), ISBLANK(Country__c))</errorConditionFormula>
        <errorMessage>Please enter Phone or Address as contact Information</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Valid_Phone</fullName>
        <active>true</active>
        <description>Phone number should be of 10 digits</description>
        <errorConditionFormula>AND( NOT(ISBLANK(Phone__c)) ,LEN(Phone__c) != 10 )</errorConditionFormula>
        <errorMessage>Please enter a valid phone number</errorMessage>
    </validationRules>
</CustomObject>